(lemmas) (cli)
- `aaaton/golem/v4` lemmatization
- file name, parent dir name, and title-based language detection for lemmatization
- language detection for lemmatization from dictionary metadata if present, filename, or subdir name
- lemmas.html page for web ui downloading and new CLI commands: `wudict lemmas list` and `wudict lemmas download es fr de it`
- CLI only: `wudict dump -o somedir /path/dict.mdx` to export as pyglossary-compatible .CSV
